- global/local alignments: command line interface working, improved error message in web app. possible existing bug in algo for some alignments - fixed menu item spacing - updated README

--- a/static/style.css
+++ b/static/style.css
@@ -82,7 +82,7 @@ width:527px;
 	font-size:12px;
 	font-weight:bold;
 	text-decoration:none;
-	width:40px;
+	width:60px;
 }
 
 #hmm {
@@ -96,7 +96,7 @@ width:527px;
 	font-size:12px;
 	font-weight:bold;
 	text-decoration:none;
-	width:30px;
+	width:45px;
 }
 
 #phylo {
@@ -109,7 +109,7 @@ width:527px;
 	font-size:12px;
 	font-weight:bold;
 	text-decoration:none;
-	width:105px;
+	width:60px;
 }
 
 #needleman {
@@ -123,7 +123,7 @@ width:527px;
 	font-size:12px;
 	font-weight:bold;
 	text-decoration:none;
-	width:115px;
+	width:125px;
 }
 
 #smith {
@@ -136,7 +136,7 @@ width:527px;
 	font-size:12px;
 	font-weight:bold;
 	text-decoration:none;
-	width:100px;
+	width:115px;
 }
 
 #home {
@@ -150,7 +150,7 @@ width:527px;
 	font-size:12px;
 	font-weight:bold;
 	text-decoration:none;
-	width:40px;
+	width:50px;
 }
 
 #menu ul li a:hover{
